Front End Implementation
